--- a/assets/scss/styles.scss
+++ b/assets/scss/styles.scss
@@ -329,6 +329,8 @@ video {
     overflow-y: hidden;
     scroll-snap-type: x mandatory;
     &::-webkit-scrollbar {
+        position: fixed;
+        bottom: 3;
         background-color: darken($coloured-light-grey-1, 15%);
         height: 8px;
     }
@@ -374,7 +376,7 @@ video {
 .merch-buttons {
     display: flex;
     justify-content: space-evenly;
-    margin: 60px 0;
+    padding: 30px 0;
     button {
         cursor: pointer;
         padding: 7px 20px;
